# Unique

./: CHANGELOG.md  Main.hs  README.md  Unique.hs  unique-lang.cabal  unique.cabal
app/: Examples.hs  Main.hs
examples/: fibonacci.uniq  hello-world.uniq  truth-machine.uniq
unique-lang/: CHANGELOG.md
unique-lang/app/: Main.hs
