cabal-version: 2.4
name:          unique
version:       0.1.0.0
author:        Owen Bechtel
maintainer:    ombspring@gmail.com

category: Compilers/Interpreters
synopsis: Esoteric programming language where each number can only appear once

description: ADD DESCRIPTION

homepage:           https://github.com/UnaryPlus/unique
bug-reports:        https://github.com/UnaryPlus/unique/issues
license:            MIT
license-file:       LICENSE
extra-source-files: CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/UnaryPlus/unique.git

executable unique
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    main-is:          Main.hs
    other-modules:    Examples

    build-depends:
      base >= 4.11 && < 5,
      transformers,
      text,
      neat-interpolation
